gradle 7.0-rc-2; intellij inspections